add login swagger endpoint + minor changes
